--- a/gleam.toml
+++ b/gleam.toml
@@ -16,4 +16,4 @@ version = "1.0.0"
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
 
 [dev-dependencies]
-gleeunit = ">= 1.0.0 and < 2.0.0"
+startest = ">= 0.2.0 and < 1.0.0"
