--- a/gleam.toml
+++ b/gleam.toml
@@ -1,16 +1,9 @@
 name = "delay_times"
 version = "1.0.0"
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
-#
-# For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/.
+description = "A Gleam library for working with delay times."
+licences = ["Apache-2.0"]
+repository = { type = "github", user = "JosephTLyons", repo = "delay_times_gleam" }
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
